dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/invalidOperand/add.alg
algoritmo "erro add logico"

inicio

    escreval(verdadeiro + "s")

fimalgoritmo
